Bug 144155 - CALC Row operations over 100 times slower in 7.2 compared to 7.1
Summary: CALC Row operations over 100 times slower in 7.2 compared to 7.1
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.2.0.4 release
Hardware: All All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:7.3.0 target:7.2.2 target:7.2.1
Keywords: bibisected, bisected, perf, regression
: 144131 144592 (view as bug list)
Depends on:
Blocks: AutoFilter
  Show dependency treegraph
 
Reported: 2021-08-29 11:35 UTC by David Lynch
Modified: 2021-09-20 15:06 UTC (History)
10 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Lynch 2021-08-29 11:35:50 UTC
Description:
Row operations (eg hide rows or insert->side cells down very very slow.

Steps to Reproduce:
Open new spreadsheet, in the name box, enter something like 
A43:AMJ1048576
Then "Hide rows"

Steps to Reproduce:
1.Open new spreadsheet, in the name box, enter something like 
2.in the name box, enter something like 
A43:AMJ1048576
3. "Hide rows"
or 
Select cells -> Insert -> Shift cells down

Actual Results:
Select cells -> Insert -> Shift cells down almost instantaneous in 7.1.4
92 seconds in 7.2.0.4.
Status bar shows "Adapt row height" ... but row height in the shett is fixed.

Expected Results:
As actual results


Reproducible: Always


User Profile Reset: No



Additional Info:
Same behaviour in safe mode.
Version: 7.2.0.4 (x64) / LibreOffice Community
Build ID: 9a9c6381e3f7a62afc1329bd359cc48accb6435b
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: en-GB (en_GB); UI: en-GB
Calc: threaded
Supersedes bug 144131
Comment 1 m.a.riosv 2021-08-29 12:48:00 UTC
Time to Hide row:
less than 1"
Version: 7.1.5.2 (x64) / LibreOffice Community
Build ID: 85f04e9f809797b8199d13c421bd8a2b025d52b5
CPU threads: 4; OS: Windows 10.0 Build 21390; UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: es-ES Calc: threaded

4'44" with
Version: 7.2.0.4 (x64) / LibreOffice Community
Build ID: 9a9c6381e3f7a62afc1329bd359cc48accb6435b
CPU threads: 4; OS: Windows 10.0 Build 21390; UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL

5'46"
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 74d35e143d557a7e65c4443f5b80cb9d406b1fa1
CPU threads: 4; OS: Windows 10.0 Build 21390; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL
Comment 2 Timur 2021-08-30 07:48:10 UTC
Regression. 
Linux 7.2 commit 275a188e938edfe05cf68473181542a7e03509f8
Date:   Mon Mar 22 16:19:11 2021 +0100
    source 3678e0efcb8bedc58dd329a430da0ac3b1572df8
    pre af6a33f495a6c0ad1981a250dde355044e8519cb

author	Tünde Tóth <toth.tunde@nisz.hu>	2021-03-05 10:20:03 +0100
committer	László Németh <nemeth@numbertext.org>	2021-03-22 14:16:12 +0100
tdf#36383 sc AutoFilter: fix changing row height
Comment 3 David Lynch 2021-08-31 08:01:02 UTC
I have just submitted bug 144205

There are performance issues in 7.1.5 as well as 7.2.0.

7.1.5.2 is also markedly slow. I have had to revert to 7.1.4 to get work done.
However, Hide rows is not slow, it's instanteous, like 7.1.4.
The commands that are slow in 7.1.5 include:
inserting columns
entering a new formula
filling a series
filling down
Comment 4 Xisco Faulí 2021-09-02 13:47:16 UTC
I propose to revert the problematic commit for now: https://gerrit.libreoffice.org/c/core/+/121512
Comment 5 Xisco Faulí 2021-09-02 13:49:57 UTC
*** Bug 144131 has been marked as a duplicate of this bug. ***
Comment 6 Commit Notification 2021-09-03 07:35:49 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9e7f07dc1378354a5228898e339f8336bbbb41f3

tdf#144155: Revert "tdf#36383 sc AutoFilter: fix changing row height"

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Timur 2021-09-03 08:38:27 UTC
Row height regressions since 6.2 from bug 62268 are in bug 125077.
This one needs to be resolved/revered for bug 144205 to be reassessed. 
OK, done, waiting for bibisect repo.
Comment 8 Commit Notification 2021-09-03 14:07:49 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/91eb9e16cd73df2249a24f949ea8bef62bbe2d09

tdf#144155: Revert "tdf#36383 sc AutoFilter: fix changing row height"

It will be available in 7.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Xisco Faulí 2021-09-03 14:13:18 UTC
Verified in

Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: e4b1ba9447a0a56aa56400f9f44d8eecb6c11e9c
CPU threads: 4; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

Closing as VERIFIED FIXED
Comment 10 Commit Notification 2021-09-08 17:35:00 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-2-1":

https://git.libreoffice.org/core/commit/98a3abe58f13c875505fded61b4a39840600b3a3

tdf#144155: Revert "tdf#36383 sc AutoFilter: fix changing row height"

It will be available in 7.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 David Lynch 2021-09-10 08:41:29 UTC
The issue with "Hide row" seems resolved. But there are still performance issues. The following tests are on attachment 174675 [details] to bug 114205:

Hide row > instantaneous
Show row > instantaneous
Select cell > instantaneous
Enter data in cell > instantaneous
Enter simple formula (=AO1) in cell > instantaneous
Insert column > 10 secs
Fill down BH2:BH3 > 11 secs
Delete data from (a single) cell > 20 secs
Delete simple formula (=AO1) in cell > 10 secs
Select row > 10 secs


Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 96d1240adf946c443fb2c369a1c84e31e259c7a8
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: en-GB (en_GB); UI: en-GB
Calc: threaded
Comment 12 Timur 2021-09-10 09:15:29 UTC
Columns are in bug 144205, no point in writing here now it's closed.
Comment 13 Xisco Faulí 2021-09-20 15:06:07 UTC
*** Bug 144592 has been marked as a duplicate of this bug. ***