tdf#144155: Revert "tdf#36383 sc AutoFilter: fix changing row height"

This reverts commit 3678e0efcb8bedc58dd329a430da0ac3b1572df8.

Conflicts: sc/qa/uitest/autofilter/tdf36383.py
Change-Id: Ie1abd0cdea013571a27b187ffcb20125a0656442