sc/source/ui/view/viewfunc.cxx
@@ -2186,17 +2186,7 @@ void ScViewFunc::SetWidthOrHeight(
                     aCxt.setExtraHeight(nSizeTwips);
                     rDoc.SetOptimalHeight(aCxt, nStartNo, nEndNo, nTab, true);
                     if (bAll)
-                    {
-                        for (SCROW nRow = nStartNo; nRow <= nEndNo; ++nRow)
-                        {
-                            SCROW nLastRow = nRow;
-                            // tdf#36383 skip consecutive rows hidden by AutoFilter
-                            if (rDoc.RowFiltered(nRow, nTab, nullptr, &nLastRow))
-                                nRow = nLastRow;
-                            else
-                                rDoc.ShowRow(nRow, nTab, true);
-                        }
-                    }
+                        rDoc.ShowRows( nStartNo, nEndNo, nTab, true );
 
                     //  Manual-Flag already (re)set in SetOptimalHeight in case of bAll=sal_True
                     //  (set for Extra-Height, else reset).
@@ -2209,15 +2199,7 @@ void ScViewFunc::SetWidthOrHeight(
                         rDoc.SetManualHeight( nStartNo, nEndNo, nTab, true );          // height was set manually
                     }
 
-                    for (SCROW nRow = nStartNo; nRow <= nEndNo; ++nRow)
-                    {
-                        SCROW nLastRow = nRow;
-                        // tdf#36383 skip consecutive rows hidden by AutoFilter
-                        if (rDoc.RowFiltered(nRow, nTab, nullptr, &nLastRow))
-                            nRow = nLastRow;
-                        else
-                            rDoc.ShowRow(nRow, nTab, nSizeTwips != 0);
-                    }
+                    rDoc.ShowRows( nStartNo, nEndNo, nTab, nSizeTwips != 0 );
 
                     if (!bShow && nStartNo <= nCurY && nCurY <= nEndNo && nTab == nCurTab)
                     {
